# imagestacker

./: .gitignore  ANWENDER_HANDBUCH.md  Cargo.toml  ECC_IMPLEMENTATION_PLAN.md  LIESMICH.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PROJECT_STATUS.md  README.md  USER_MANUAL.md  scale-images.sh  speedup optimization.md  test-stacking-cpu.sh  test-stacking.sh  test_alpha.rs  test_blur_detection.sh
.cargo/: config.toml
.github/workflows/: build-artifacts.yml
packaging/linux/: INSTALL.md  Makefile  README.md  build-deb.sh  build-rpm.sh  create-source-tarball.sh  imagestacker.spec  quick-install.sh
packaging/macos/: README.md  build.sh
packaging/windows/: README.md  build.ps1
src/: GUI_STRUCTURE.md  alignment.rs  config.rs  gui.rs  image_io.rs  logger.rs  main.rs  messages.rs  opencv_compat.rs  post_processing.rs  processing.rs  processing.rs.backup  settings.rs  sharpness.rs  sharpness_cache.rs  stacking.rs  system_info.rs  thumbnail.rs
src/gui/: log_capture.rs  mod.rs  state.rs  subscriptions.rs  theme.rs  update.rs
testimages_small/sharpness/: A7R03436.yml  A7R03437.yml  A7R03438.yml  A7R03439.yml  A7R03440.yml  A7R03441.yml  A7R03442.yml  A7R03443.yml  A7R03444.yml  A7R03445.yml  A7R03446.yml  A7R03447.yml  A7R03448.yml  A7R03449.yml  A7R03450.yml  A7R03451.yml  A7R03452.yml  A7R03453.yml  A7R03454.yml  A7R03455.yml  A7R03456.yml  A7R03457.yml  A7R03458.yml  A7R03459.yml  A7R03460.yml  A7R03461.yml  A7R03462.yml  A7R03463.yml  A7R03464.yml  A7R03465.yml  A7R03466.yml  A7R03467.yml  A7R03468.yml  A7R03469.yml  A7R03470.yml  A7R03471.yml  A7R03472.yml  A7R03473.yml  (+15 more)
(+20 files in other folders)
