[package]
name = "imagestacker"
version = "1.0.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["image", "canvas", "tokio"] }
opencv = "0.94"
image = "0.25"
rfd = "0.15"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
opener = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5.0"
rayon = "1.10"
tokio = { version = "1.0", features = ["fs", "rt-multi-thread"] }
pulldown-cmark = "0.9"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ocvrs_has_inherent_feature_opencl)'] }
